fixed label alignment issues

--- a/website/css/pages/demo.scss
+++ b/website/css/pages/demo.scss
@@ -19,7 +19,7 @@ h2 { font-size: 40px; }
 
 input {
 	font-size: 100%;
-	vertical-align: baseline;
+	vertical-align: top;
 }
 
 .section-intro { text-align: center; }
@@ -50,20 +50,24 @@ input {
 		box-shadow: 0 0 10px 0 rgba(0,0,0,.3);
 		~ .form-control-label {
 			opacity: 1;
-			transform: translate(-115%, -50%);
+			transform: translateX(-20px);
 		}
+	}
+
+	&[type="textarea"] {
+		min-height: 120px;
 	}
 }
 
 .form-control-label {
 	position: absolute;
-	top: 50%;
-	left: 0;
+	top: 3px;
+	right: 100%;
 	z-index: 1;
 	padding: 7px 15px;
 	color: #fff;
 	background: #333;
-	transform: translate(0, -50%);
+	transform: translateX(100%);
 	border-radius: 4px;
 	opacity: 0;
 	white-space: nowrap;
